example/github/ingress-trigger.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tekton-trigger
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/configuration-snippet: |
      rewrite ^(/[a-z1-9\-]*)$ $1/ redirect;
spec:
  rules:
    - http:
        paths:
          - path: /ci(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: el-github-listener-interceptor
                port:
                  number: 8000
